--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "prisma": "^6.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,7 +28,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
