--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@headlessui/react": "^2.2.3",
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "openai": "^4.100.0",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "resend": "^4.5.1"
   },
   "devDependencies": {
