--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.3",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.4.0",
     "@prisma/client": "^6.7.0",
+    "@types/react-datepicker": "^6.2.0",
     "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.13",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "openai": "^4.100.0",
