--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,16 +15,17 @@
     "@headlessui/react": "^2.2.3",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.4.0",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.2",
     "@types/react-datepicker": "^6.2.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "openai": "^4.100.0",
-    "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "resend": "^4.5.1"
@@ -34,10 +35,12 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
