--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:seed": "ts-node prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
@@ -21,7 +25,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/react-datepicker": "^6.2.0",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -36,6 +39,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "resend": "^4.5.1",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0",
     "winston": "^3.17.0"
   },
@@ -47,10 +51,12 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "bcryptjs": "^3.0.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prisma": "^6.8.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
